--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation project(':collapsiblecalendarview2')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 
     testImplementation 'junit:junit:4.12'
 
