--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew :clean app:assemble
+      run: ./gradlew :clean collapsiblecalendarview:assemble
